# introduction-to-zephyr

.devcontainer/: devcontainer.json
workspace/apps/01_blink/: CMakeLists.txt
workspace/apps/01_blink/boards/: esp32s3_devkitc.overlay  rpi_pico.overlay
workspace/apps/01_blink/include/: print.h
workspace/apps/01_blink/src/: main.c  print.c
workspace/apps/02_demo_cmake/: CMakeLists.txt
workspace/learn/: prj.conf
workspace/learn/boards/: esp32s3_devkitc.overlay
workspace/learn/src/: main.c
